--- a/index.html
+++ b/index.html
@@ -1,53 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scientific Calculator</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    <title>Dark Light Mode Calculator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="calculator">
+      <input type="checkbox" id="dark-switch" />
       <div class="display">
         <input type="text" placeholder="0" id="input" disabled />
       </div>
       <div class="buttons">
         <input type="button" value="AC" id="clear" />
-        <input type="button" value="Erase" id="erase" />
-        <input type="button" value="1" class="input-button" />
-        <input type="button" value="2" class="input-button" />
-        <input type="button" value="3" class="input-button" />
-        <input type="button" value="4" class="input-button" />
-        <input type="button" value="5" class="input-button" />
-        <input type="button" value="6" class="input-button" />
+        <input type="button" value="DEL" id="erase" />
+        <input type="button" value="/" class="input-button" />
+        <input type="button" value="*" class="input-button" />
         <input type="button" value="7" class="input-button" />
         <input type="button" value="8" class="input-button" />
         <input type="button" value="9" class="input-button" />
+        <input type="button" value="-" class="input-button" />
+        <input type="button" value="6" class="input-button" />
+        <input type="button" value="5" class="input-button" />
+        <input type="button" value="4" class="input-button" />
+        <input type="button" value="+" class="input-button" />
+        <input type="button" value="1" class="input-button" />
+        <input type="button" value="2" class="input-button" />
+        <input type="button" value="3" class="input-button" />
+        <input type="button" value="=" class="input-button" id="equal" />
         <input type="button" value="0" class="input-button" />
         <input type="button" value="." class="input-button" />
-        <input type="button" value="+" class="input-button" />
-        <input type="button" value="-" class="input-button" />
-        <input type="button" value="*" class="input-button" />
-        <input type="button" value="/" class="input-button" />
-        <input type="button" value="(" class="input-button" />
-        <input type="button" value=")" class="input-button" />
-        <input type="button" value="%" class="input-button" id="percent" />
-        <input type="button" value="=" id="equal" />
-
-        <input type="button" value="x^y" id="pow" />
-        <input type="button" value="sin" id="sin" />
-        <input type="button" value="cos" id="cos" />
-        <input type="button" value="tan" id="tan" />
-        <input type="button" value="pie" id="pi" />
-        <input type="button" value="e" id="e" />
-        <input type="button" value="log" id="log" />
       </div>
     </div>
-
     <script src="main.js"></script>
   </body>
 </html>
