--- a/index.html
+++ b/index.html
@@ -2,35 +2,23 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dark Light Mode Calculator</title>
+    <title>Barcode Generator</title>
+    <!-- Google Fonts-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Barcode CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.11.6/JsBarcode.all.min.js"></script>
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="calculator">
-      <input type="checkbox" id="dark-switch" />
-      <div class="display">
-        <input type="text" placeholder="0" id="input" disabled />
-      </div>
-      <div class="buttons">
-        <input type="button" value="AC" id="clear" />
-        <input type="button" value="DEL" id="erase" />
-        <input type="button" value="/" class="input-button" />
-        <input type="button" value="*" class="input-button" />
-        <input type="button" value="7" class="input-button" />
-        <input type="button" value="8" class="input-button" />
-        <input type="button" value="9" class="input-button" />
-        <input type="button" value="-" class="input-button" />
-        <input type="button" value="6" class="input-button" />
-        <input type="button" value="5" class="input-button" />
-        <input type="button" value="4" class="input-button" />
-        <input type="button" value="+" class="input-button" />
-        <input type="button" value="1" class="input-button" />
-        <input type="button" value="2" class="input-button" />
-        <input type="button" value="3" class="input-button" />
-        <input type="button" value="=" class="input-button" id="equal" />
-        <input type="button" value="0" class="input-button" />
-        <input type="button" value="." class="input-button" />
-      </div>
+    <div class="container">
+      <h1>Barcode Generator</h1>
+      <input type="text" id="input" />
+      <button id="btn-barcode-generator">Barcode Generator</button>
+      <svg id="barcode"></svg>
     </div>
     <script src="main.js"></script>
   </body>
